life news added

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
     <div id="fancytemp" class="container"></div>
     <div id="wrapper">
         <div id="news" class="container">
-            <div class="col-md-12">
+            <div class="newsAddBlock col-md-12">
                 <div class="addNewForm form-horizontal">
                     <button class="btnAddNews btn btn-warning btn-lg">Добавить новость</button>
                     <div class="newsAddFormEditContainer">
