adaptive layout news added

--- a/index.html
+++ b/index.html
@@ -572,10 +572,12 @@
                     </div>
                 </div>
             </div>
+            <div class="clearfix"></div>
             <div class="row newsContainer">
                 <!--вставить сюда новости-->
             </div>
         </div>
+        <div id="newsEnd"></div>
         <div id="container" class="container"></div>
     </div>
 
